Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115121

PathView can be clicked through if it is flicking and delegate has MouseArea

    XMLWordPrintable

Details

    • d739b5709 (dev), 26a558c40 (6.6), ffa89162a (tqtc/lts-6.5)

    Description

      To reproduce:

      • run attached example
      • flick the path view up or down
      • click the green area

      If a delegate happened to be under the mouse at time of the click, the event goes behind the PathView to the MouseArea underneath it. Instead it would seem like it should be stopped by the PathView itself.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            santhoshkumar Santhosh Kumar Selvaraj
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes