src/quick/items/qquickpathview.cpp
@@ -1848,7 +1848,8 @@ bool QQuickPathView::childMouseEventFilter(QQuickItem *i, QEvent *e)
 
             const bool filtered = stealThisEvent || grabberDisabled;
             if (filtered)
-                pe->setAccepted(false);
+                pe->setAccepted(stealThisEvent && grabber == this && grabber->isEnabled());
+
             return filtered;
         } else if (d->timer.isValid()) {
             d->timer.invalidate();
